--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "multer": "^2.0.2",
     "postgres": "^3.4.8",
     "uuid": "^11.1.0",
     "xss": "^1.0.15"
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^4.17.21",
+    "@types/multer": "^2.0.0",
     "@types/uuid": "^10.0.0",
     "tsx": "^4.19.0",
     "typescript": "^5.7.0"
